--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="nav">
     <div class="container">
       <ul class ="pull-left">
-        <li><a href="yoga.jpg">Yoga</a></li>
+        <li><a href="yoga.html">Yoga</a></li>
         <li><a href="https://www.etsy.com/people/ValeTheWhale">Tie Dye</a></li>
       <!-- put in linkes to two pages here^-->
       </ul>
