--- a/yoga.html
+++ b/yoga.html
@@ -14,18 +14,18 @@
 <!--need to insert pics!-->
 <div class="section group">
 	<div class="col span_1_of_4">
-  <img src="z1.jpg">
+  <img src="yogi1.jpg">
 	</div>
 	<div class="col span_1_of_4">
-    <img src="z2.jpg">
+    <img src="yogi2.jpg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="z3.jpg">
+    <img src="yogi3.jpg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="z4.jpg">
+    <img src="yogi4.jpg">
 
 	</div>
 </div>
