--- a/yoga.html
+++ b/yoga.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link rel="stylesheet" type="text/css" href="yoga.css"/>
 <!--my stylesheet:-->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -13,10 +13,12 @@
 
 <!--need to insert pics!-->
 <div class="section group">
-	<div class="col span_1_of_4">
+
+  <div class="col span_1_of_4">
   <img src="yogi1.jpg">
 	</div>
-	<div class="col span_1_of_4">
+
+  <div class="col span_1_of_4">
     <img src="yogi2.jpg">
 
 	</div>
