--- a/yoga.html
+++ b/yoga.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="yoga.css"/>
+  <link rel="stylesheet" type="text/css" href="css/yoga.css"/>
 <!--my stylesheet:-->
 
 </head>
