--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </div>
   </div>
 
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Made20bacon.png">
+
+
   <div class="jumbotron">
     <div class="container">
       <h1>Vale Elijah</h1>
