--- a/yoga.html
+++ b/yoga.html
@@ -8,7 +8,7 @@
 
 </head>
 
-
+<body>
 
 <!--need to insert pics!-->
 <div class="section group">
@@ -31,6 +31,6 @@
 	</div>
 </div>
 
-
+</body>
 
 </html>
