--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Made20bacon.png">
+  <img src="assets/yogi.jpg">
 
 
   <div class="jumbotron">
