--- a/yoga.html
+++ b/yoga.html
@@ -14,19 +14,19 @@
 <div class="section group">
 
   <div class="col span_1_of_4">
-  <img src="yogi1.jpg">
+  <img src="asset/yogi1.jpg">
 	</div>
 
   <div class="col span_1_of_4">
-    <img src="yogi2.jpg">
+    <img src="asset/yogi2.jpg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="yogi3.jpg">
+    <img src="asset/yogi3.jpg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="yogi4.jpg">
+    <img src="asset/yogi4.jpg">
 
 	</div>
 </div>
