--- a/yoga.html
+++ b/yoga.html
@@ -14,19 +14,19 @@
 <div class="section group">
 
   <div class="col span_1_of_4">
-  <img src="assets/yogi1.jpg">
+  <img src="assets/yogi1.jpeg">
 	</div>
 
   <div class="col span_1_of_4">
-    <img src="assets/yogi2.jpg">
+    <img src="assets/yogi2.jpeg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="assets/yogi3.jpg">
+    <img src="assets/yogi3.jpeg">
 
 	</div>
 	<div class="col span_1_of_4">
-    <img src="assets/yogi4.jpg">
+    <img src="assets/yogi4.jpeg">
 
 	</div>
 </div>
