--- a/yoga.html
+++ b/yoga.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <img src="assets/yogi1.jpeg">
+  <img src="assets/yogi1.jpeg" width="1000">
 
-    <img src="assets/yogi2.jpeg">
+    <img src="assets/yogi2.jpeg" width="1000">
 
-    <img src="assets/yogi3.jpeg">
+    <img src="assets/yogi3.jpeg" width="1000">
 
-    <img src="assets/yogi4.jpeg">
+    <img src="assets/yogi4.jpeg" width="1000">
 
 
 </body>
