--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- put in linkes to two pages here^-->
       </ul>
     <ul class ="pull-right">
-      <li><a href="http://www.instagram.com/valethewhale">ValeTheWhale</a></li>
+      <li><a href="http://www.instagram.com/valethewhale">@ValeTheWhale</a></li>
     </ul>
     </div>
   </div>
