--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <ul class ="pull-left">
         <li><a href="http://www.instagram.com/valethewhale">@ValeTheWhale</a></li>
         <li><a href="yoga.html">Yoga</a></li>
+        <li><a href="animals.html">Animals</a></li>
         <li><a href="https://www.etsy.com/people/ValeTheWhale">Tie Dye</a></li>
+
     </ul>
   </div>
 
