--- a/animals.html
+++ b/animals.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <img src="assets/dolphin1.jpeg" width="1000">
-  <img src="assets/dolphin2.jpeg" width="1000">
-  <img src="assets/dolphin3.jpeg" width="1000">
-  <img src="assets/dolphin4.jpeg" width="1000">
-  <img src="assets/dog1.jpeg" width="1000">
-  <img src="assets/dog2.jpeg" width="1000">
-  <img src="assets/sealion.jpeg" width="1000">
-  <img src="assets/zoey2.jpeg" width="1000">
+  <img src="assets/dolphin1.jpg" width="1000">
+  <img src="assets/dolphin2.jpg" width="1000">
+  <img src="assets/dolphin3.jpg" width="1000">
+  <img src="assets/dolphin4.jpg" width="1000">
+  <img src="assets/dog1.jpg" width="1000">
+  <img src="assets/dog2.jpg" width="1000">
+  <img src="assets/sealion.jpg" width="1000">
+  <img src="assets/zoey2.jpg" width="1000">
 
 
 
