--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>Vale Elijah</h1>
-      <p>Artist & Yogi</p>
+      <p>Artist, Yogi &amp; Animal Behaviorist</p>
   <!--    <a href="#">Bio</a> -->
     </div>
 
