--- a/yoga.html
+++ b/yoga.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <img src="assets/yogi.jpeg" width="1000">
+
   <img src="assets/yogi1.jpeg" width="1000">
 
     <img src="assets/yogi2.jpeg" width="1000">
