--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <!--    <a href="#">Bio</a> -->
     </div>
 
-    <background-image: url("whaleBold.png") repeat>
-)
+  <!--      <background-image: url("whaleBold.png") repeat>-->
+
 
   </div>
 
