--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <li><a href="http://www.instagram.com/valethewhale">@ValeTheWhale</a></li>
         <li><a href="yoga.html">Yoga</a></li>
         <li><a href="animals.html">Animals</a></li>
-        <li><a href="https://www.etsy.com/people/ValeTheWhale">Tie Dye</a></li>
+        <li><a href="https://www.etsy.com/shop/ValeTheWhale">Tie Dye</a></li>
+        <li><a href="http://www.instagram.com/valethewhaledesigns">@ValeTheWhaleDesigns</a></li>
+
 
     </ul>
   </div>
